unpackaged/objects/Challenge__c.object
<CustomObject>
    <description>Challenge in Game Engine</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>Chatter action of Post or Comment</description>
        <inlineHelpText>Chatter action of Post or Comment</inlineHelpText>
        <label>Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comment</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status of Challenge.</description>
        <inlineHelpText>Status of Challenge.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <description>A challenge that has been inactive for over 1 year.</description>
        <formula>Days_Inactive__c &gt; 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A challenge that has been inactive for over 1 year.</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the Challenge is awarded automatically</description>
        <inlineHelpText>Indicator if the Challenge is awarded automatically</inlineHelpText>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Value__c</fullName>
        <description>Core Value associated to the Challenge</description>
        <inlineHelpText>Core Value associated to the Challenge</inlineHelpText>
        <label>Core Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Fun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Deactivated__c</fullName>
        <description>Date that the Challenge status was set to inactive</description>
        <inlineHelpText>Date that the Challenge status was set to inactive</inlineHelpText>
        <label>Date Deactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Inactive__c</fullName>
        <formula>Today() - NULLVALUE(Date_Deactivated__c, Today())</formula>
        <label>Days Inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Challenge</description>
        <inlineHelpText>Description of the Challenge</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>date(year(today())+1, month(today()), day(today()))</defaultValue>
        <description>Date the Challenge ends</description>
        <inlineHelpText>Date the Challenge ends</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ended_in_Last_Year__c</fullName>
        <formula>(Days_Inactive__c &gt; 30) &amp;&amp; (Days_Inactive__c &lt; 365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ended in Last Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <description>Focus associated to Challenge</description>
        <inlineHelpText>Focus associated to Challenge</inlineHelpText>
        <label>Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anniversaries</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>Continuing Ed</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Recognition</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Shoutouts</fullName>
                </value>
                <value>
                    <fullName>Silver Lining</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Topcoder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hashtag__c</fullName>
        <description>Hashtag to indicate the Challenge</description>
        <inlineHelpText>Hashtag phrase.  Do not include the &quot;#&quot; symbol.</inlineHelpText>
        <label>Hashtag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_Achievements_Per_User__c</fullName>
        <description>Maximum number of times a particular user can achieve this Challenge.</description>
        <inlineHelpText>Maximum number of times a particular user can achieve this Challenge.</inlineHelpText>
        <label>Max Number of Achievements Per User</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Awarded_To__c</fullName>
        <description>Points that will be Awarded to when Challenge is Chattered about</description>
        <inlineHelpText>Points that will be Awarded to when Challenge is Chattered about</inlineHelpText>
        <label>Points Awarded To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>@Mentions</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recently_Ended__c</fullName>
        <description>A challenge that has been de-activated in the past 30 days.</description>
        <formula>Days_Inactive__c &gt;= 1 &amp;&amp; Days_Inactive__c &lt;= 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A challenge that has been de-activated in the past 30 days.</inlineHelpText>
        <label>Recently Ended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reward_Points__c</fullName>
        <description>Points awarded to the user upon completion of the Challenge</description>
        <inlineHelpText>Points awarded to the user upon completion of the Challenge</inlineHelpText>
        <label>Reward Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>The date that the Challenge becomes active.</description>
        <inlineHelpText>The date that the Challenge becomes active.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Notes__c</fullName>
        <description>Technical notes about how this challenge is awarded, such as the name of the trigger, filter conditions, batch processes, etc.</description>
        <inlineHelpText>Technical notes about how this challenge is awarded, such as the name of the trigger, filter conditions, batch processes, etc.</inlineHelpText>
        <label>Technical Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title for the Challenge</description>
        <inlineHelpText>Title for the Challenge</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Challenge</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Active__c</columns>
        <columns>Automated__c</columns>
        <columns>Hashtag__c</columns>
        <columns>Reward_Points__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Active__c</columns>
        <columns>Automated__c</columns>
        <columns>Reward_Points__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Active__c</columns>
        <columns>Automated__c</columns>
        <columns>Hashtag__c</columns>
        <columns>Reward_Points__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <recordTypes>
        <fullName>Challenge</fullName>
        <active>true</active>
        <description>Base Challenge</description>
        <label>Challenge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chatter</fullName>
        <active>true</active>
        <description>Chatter Challenge</description>
        <label>Chatter</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hashtag_alphanumeric_only</fullName>
        <active>true</active>
        <description>Regex function to check for alpha numerics</description>
        <errorConditionFormula>NOT(REGEX(Hashtag__c, &quot;^[a-zA-Z0-9]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Hashtag__c</errorDisplayField>
        <errorMessage>Hashtag can only have a-z and 0-9 character</errorMessage>
    </validationRules>
</CustomObject>